# mac

./: .dockerignore  .gitignore  DOLT_REMOTE.md  Dockerfile  README.md  pyproject.toml  setup.sh
.beads/: config.yaml  issues.jsonl  metadata.json
.mac/: project.yaml
deploy/: deploy-mac-fleet.sh  install-firecrawl-gateway.sh  install-headscale.sh  install-qdrant-service.sh  install-tailscale.sh  install-tokenhub-service.sh  sync-hermes-home-channels.py
docs/: agent-lifecycle-proof.md  getting-started.md  hermes-boundary.md  hermes-integration.md  integration-authority-contract.md  lifecycle-proof.md  production-deployment.md  repository-runtime-contract.md  scaling-plan.md  soul-preservation-runbook.md
scripts/: bootstrap-project.py  cleanup_artifacts.py  import_loom_roles.py  import_loom_workflows.py  prove-c26-inception.py  run-contract-tests.sh  setup-fleet.py
tests/: _deploy_helpers.py  conftest.py  test_api.py  test_api_roles.py  test_beads_bridge_service.py  test_control_plane.py  test_dashboard_modules.py  test_dashboard_ui_modules.py  test_deploy_agent_configs.py  test_deploy_disk_hygiene.py  test_deploy_fleet_drain.py  test_deploy_fleet_modules.py  test_deploy_modules.py  test_deploy_ssh_reconcile.py  test_deploy_worker_token_redaction.py  test_dispatch_role_hardware.py  test_domain_event_outbox.py  test_e2e.py  test_evidence_validators.py  test_firecrawl_gateway.py  test_hermes_adapter.py  test_hermes_prompt_bridge_patch.py  test_hermes_runtime.py  test_hermes_startup.py  test_hgmac_cli.py  test_migration.py  test_mood_and_nap.py  test_roles_service.py  (+10 more)
(+143 files in other folders)
