[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mac"
version = "0.1.0"
description = "Trustworthy coordination layer for a fleet of AI agents."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "cryptography>=42,<46",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]

[project.scripts]
mac = "mac.cli:main"
mac-hermes = "mac.hermes_adapter:main"
mac-agent = "mac.worker:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/mac"]

[tool.hatch.build.targets.wheel.force-include]
"src/mac/ui" = "mac/ui"
